--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,8 +4,23 @@
 @import url('component/input.css');
 @import url('component/select.css');
 
+nav{
+    background: var(--primaryColor);
+    padding: 30px 20px 140px 0px;
+    border-bottom-left-radius: 180px;
+    border-bottom-right-radius: 180px;   
+}
+
+.left-logo{
+    background: white;
+    padding: 7px 10px ;
+    width: 40%;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
+
 header{
-    padding: 253px 0 79px 0;
+    padding: 40px 0 79px 0;
 }
 
 
@@ -35,8 +50,9 @@ header{
 
 .instructor-box{
     background-color: var(--primaryColor);
-    padding: 80px 35px;
-    border-radius: 20px;
+    padding: 100px 35px;
+    border-top-left-radius: 170px;
+    border-top-right-radius: 170px;
 }
 
 footer{
@@ -48,4 +64,18 @@ footer{
     background: white;
     padding: 10px 12px;
     border-radius: 9px;
+}
+
+@media screen and (min-width : 768px) {
+
+    .instructor-box{
+        background-color: var(--primaryColor);
+        padding: 80px 35px;
+        border-radius: 20px;
+    }
+
+    header{
+        padding: 253px 0 79px 0;
+    }
+
 }
