--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,13 +35,43 @@ header{
     width: 100%;
 }
 
-.reels-cover div{
+.reels-cover > div{
     border-radius: 20px;
     overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+
+.reels-cover > div::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: #333;
+    opacity: .2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.player-box{
+    position: absolute;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 100px;
+    padding: 14px;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
 }
 
 .reels-cover{
-    margin-left: 10px;
+    margin-left: 10px ;
 }
 
 .book{
