--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,7 +146,7 @@ footer{
 
     .finance-personal{
         padding-bottom: 10px;
-        border-bottom: 4px solid var(--primaryColor);
+        /* border-bottom: 4px solid var(--primaryColor); */
     }
 
     .footer-list{
